--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>WebDrive</title>
     <link rel="stylesheet" href="./base.css">
-    <script src="components/AuthenticationForm.js" type="module"></script>
+    <script src="views/AuthenticationForm.js" type="module"></script>
 </head>
 <body>
-    <authentication-form id="auth" style="margin: var(--padding); max-width: 50ch"></authentication-form>
+    <authentication-form></authentication-form>
 </body>
 </html>
