add session check view

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,8 +5,9 @@
     <title>WebDrive</title>
     <link rel="stylesheet" href="./base.css">
     <script src="views/AuthenticationForm.js" type="module"></script>
+    <script src="views/SessionCheck.js" type="module"></script>
 </head>
 <body>
-    <authentication-form></authentication-form>
+    <session-check></session-check>
 </body>
 </html>
