--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <title>WebDrive</title>
     <link rel="stylesheet" href="./base.css">
-    <script src="views/AuthenticationForm.js" type="module"></script>
-    <script src="views/SessionCheck.js" type="module"></script>
+    <script src="views/RouterView.js" type="module"></script>
 </head>
 <body>
-    <session-check></session-check>
+    <view-router></view-router>
 </body>
 </html>
