remove premature session validity check

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>WebDrive</title>
     <link rel="stylesheet" href="./base.css">
-    <script src="views/RouterView.js" type="module"></script>
+    <script src="views/ViewRouter.js" type="module"></script>
 </head>
 <body>
     <view-router></view-router>
