use absolut paths for imports

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>WebDrive</title>
-    <link rel="stylesheet" href="./base.css">
-    <script src="views/ViewRouter.js" type="module"></script>
+    <link rel="stylesheet" href="/base.css">
+    <script src="/views/ViewRouter.js" type="module"></script>
 </head>
 <body>
     <view-router></view-router>
