--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>WebDrive</title>
     <link rel="stylesheet" href="/base.css">
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,200"
+    />
     <script src="/views/ViewRouter.js" type="module"></script>
 </head>
 <body>
