--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,6 +8,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,200"
     />
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0"
+    />
     <script src="/views/ViewRouter.js" type="module"></script>
 </head>
 <body>
